add githubusercontent proxy

--- a/ElectronicObserver/ElectronicObserver.csproj
+++ b/ElectronicObserver/ElectronicObserver.csproj
@@ -27,7 +27,7 @@
 		<Culture />
 		<AssemblyVersion>5.2.7.0</AssemblyVersion>
 		<FileVersion>5.2.7.0</FileVersion>
-		<Version>5.2.7.0</Version>
+		<Version>5.2.7.0-Z1</Version>
 		<AnalysisLevel>preview</AnalysisLevel>
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<CodeAnalysisRuleSet>..\.sonarlint\electronicobserveren_electronicobservercsharp.ruleset</CodeAnalysisRuleSet>
